Fix content of old size shown on tab switch

Advance the fallback instead of clearing it because clearing it no
longer prevents surfaces older than primary being shown. Instead
we should set fallback to be the same as primary.

Bug: 878372
Change-Id: I94988f554abf3132c5615094ce864a9ee55ca801
Reviewed-on: https://chromium-review.googlesource.com/c/1262956
Commit-Queue: Saman Sami <samans@chromium.org>
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598124}
Former-commit-id: fccd79a558e23ab2b6cd5a7d5f618e682efd8e77